manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-sidebar-swipe
  namespace: starlight-sidebar-swipe
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-sidebar-swipe
  ports:
    - name: http
      port: 80
