manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-sidebar-swipe
  namespace: starlight-sidebar-swipe
spec:
  rules:
    - host: starlight-sidebar-swipe.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-sidebar-swipe
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-sidebar-swipe.trueberryless.org
      secretName: starlight-sidebar-swipe
